2004-03-08 Sean Evoy
	Committing the changes needed by our partners to better support a variety 
	of tool references. A class hierarchy of tool references has been introduced. 
	The base class is an abstract tool reference. Unqualified tool references, 
	like those used in the manifest or project files will be continue to be 
	treated as tool references. However, we now have some flexibility for the 
	future should a more refined type of tool reference be needed; for example, 
	a dynamic tool that reads a configuration file to determine what environment 
	it is targetting.

2004-03-05 Sean Evoy
	Fix for bug 53856: "Option reference not reporting built-in includes 
	paths to scanner"
	
	Changed the constructor for the OptionReference so it only creates a 
	list if it finds built-in path or symbol definitions in the manifest 
	or project file. The getter method for built-ins also concatenates the 
	definitions it contains with those of its parent.
	
	Undid the changes to the geenrated makefile builder since bug 53253 has 
	been corrected.
	
	Fix for bug 53861: "Cannot reset tool command back to default"
	Changed the way the configuration sets the tool command when the value 
	is the same as the default.
	
2004-03-02 Sean Evoy
	A change in VCErrorParser to fix bug 53253 causes an IndexOutOfBounds 
	exception when echoing a build command on Win32 if the absolute path 
	to the make utility is specified, i.e. C:\<path>\make.exe
	
	The work-around is to not have the launcher echo the command, and just 
	output it to the build console directly.

2004-03-02 James Ciesielski
	Marked those strings that are non-translatable as such and externalized 
	those strings that can be translated.  There is still work to be done in
	this area for this plugin.

	* src/org/eclipse/cdt/managedbuilder/core/ManagedBuilderCorePlugin.java
	* src/org/eclipse/cdt/managedbuilder/core/ManagedBuilderManager.java
	* src/org/eclipse/cdt/managedbuilder/core/ManagedCProjectNature.java